force-app/main/default/objects/WorkOrder/fields/Foreman_Submit_Status__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Submit_Status__c</fullName>
    <label>Foreman Submit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>