force-app/main/default/objects/WorkOrder/fields/Geofence_Radius_M__c.field-meta.xml
<CustomField>
    <fullName>Geofence_Radius_M__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Geofence Radius (m)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>