force-app/main/default/objects/WorkOrder/fields/Goal_HC__c.field-meta.xml
<CustomField>
    <fullName>Goal_HC__c</fullName>
    <label>Goal Headcount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>