force-app/main/default/objects/WorkOrder/fields/Goal_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Goal_Headcount__c</fullName>
    <label>Goal Headcount G HC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>