force-app/main/default/objects/WorkOrder/fields/Goal_Hours__c.field-meta.xml
<CustomField>
    <fullName>Goal_Hours__c</fullName>
    <formula>IF(ISBLANK(Goal_Minutes__c), 0, Goal_Minutes__c / 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>