force-app/main/default/objects/WorkOrder/fields/Goal_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Goal_Minutes__c</fullName>
    <label>Goal Minutes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>