force-app/main/default/objects/WorkOrder/fields/GP_Status__c.field-meta.xml
<CustomField>
    <fullName>GP_Status__c</fullName>
    <formula>IF(Gross_Margin_Pct__c &gt;= 28, &quot;Green&quot;,
        IF(Gross_Margin_Pct__c &gt;= 22, &quot;Yellow&quot;, &quot;Red&quot;))</formula>
    <label>GP Status</label>
    <type>Text</type>
</CustomField>