force-app/main/default/objects/WorkOrder/fields/Grading_OK__c.field-meta.xml
<CustomField>
    <fullName>Grading_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading OK</label>
    <type>Checkbox</type>
</CustomField>