force-app/main/default/objects/WorkOrder/fields/Gross_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Pct__c</fullName>
    <formula>IF(Revenue_Amount__c = 0 || ISBLANK(Revenue_Amount__c), 0,
        (Revenue_Amount__c - Cost_Amount__c) / Revenue_Amount__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>