force-app/main/default/objects/WorkOrder/fields/Has_Unbillable__c.field-meta.xml
<CustomField>
    <fullName>Has_Unbillable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Unbillable</label>
    <type>Checkbox</type>
</CustomField>