force-app/main/default/objects/WorkOrder/fields/Health_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Date__c</fullName>
    <label>Health Check Date</label>
    <type>DateTime</type>
</CustomField>