force-app/main/default/objects/WorkOrder/fields/Health_Check_Prompted_At__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Prompted_At__c</fullName>
    <label>Health Check Prompted At</label>
    <type>DateTime</type>
</CustomField>