force-app/main/default/objects/WorkOrder/fields/Health_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Status__c</fullName>
    <label>Health Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green - On Track</fullName>
            </value>
            <value>
                <fullName>Red - Will Not Complete Today</fullName>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
                <isActive>false</isActive>
                <label>Awaiting Response</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <isActive>false</isActive>
                <label>Green</label>
            </value>
            <value>
                <fullName>Not Prompted</fullName>
                <isActive>false</isActive>
                <label>Not Prompted</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <isActive>false</isActive>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>