force-app/main/default/objects/WorkOrder/fields/Installed_Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Installed_Sod_Sqft__c</fullName>
    <label>Installed Sod Sqft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>