force-app/main/default/objects/WorkOrder/fields/Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes__c</fullName>
    <description>This shows the material we’re billing for</description>
    <label>Invoice Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>