force-app/main/default/objects/WorkOrder/fields/Irrigation_OK__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Irrigation OK</label>
    <type>Checkbox</type>
</CustomField>