force-app/main/default/objects/WorkOrder/fields/Is_Finish_Job__c.field-meta.xml
<CustomField>
    <fullName>Is_Finish_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Finish Job</label>
    <type>Checkbox</type>
</CustomField>