force-app/main/default/objects/WorkOrder/fields/Is_First_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Visit</label>
    <type>Checkbox</type>
</CustomField>