force-app/main/default/objects/WorkOrder/fields/Is_Repair__c.field-meta.xml
<CustomField>
    <fullName>Is_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repair</label>
    <type>Checkbox</type>
</CustomField>