force-app/main/default/objects/WorkOrder/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <label>Job Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back Charge</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Inground Irrigation</fullName>
            </value>
            <value>
                <fullName>Land Development</fullName>
            </value>
            <value>
                <fullName>Outdoor Living</fullName>
            </value>
            <value>
                <fullName>Plant/Sod Grading</fullName>
            </value>
            <value>
                <fullName>Plant &amp; Sod Install</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Aqua Service</fullName>
            </value>
            <value>
                <fullName>Finish Job</fullName>
            </value>
            <value>
                <fullName>Design &amp; Build – ODL &amp; Land development</fullName>
            </value>
            <value>
                <fullName>Design &amp; Build –Inground Irrigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>