force-app/main/default/objects/WorkOrder/fields/Job_Complete_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Job_Complete_Submitted_At__c</fullName>
    <inlineHelpText>Timestamp when Foreman submitted Job Complete.</inlineHelpText>
    <label>Job Complete Submitted At</label>
    <type>DateTime</type>
</CustomField>