force-app/main/default/objects/WorkOrder/fields/Job_Complete_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Job_Complete_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User (Foreman) who submitted this Work Order as Job Complete for CSM approval.</inlineHelpText>
    <label>Job Complete Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders (Job Complete Submitted By)</relationshipLabel>
    <relationshipName>WorkOrders_JobCompleteSubmitted</relationshipName>
    <type>Lookup</type>
</CustomField>