force-app/main/default/objects/WorkOrder/fields/Job_Health__c.field-meta.xml
<CustomField>
    <fullName>Job_Health__c</fullName>
    <label>Job Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Not Yet Evaluated</fullName>
            </value>
            <value>
                <fullName>Not Prompted</fullName>
                <default>true</default>
                <label>Not Prompted</label>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Updated by FM daily by 2 PM.</fullName>
                <isActive>false</isActive>
                <label>Updated by FM daily by 2 PM.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>