force-app/main/default/objects/WorkOrder/fields/Last_ClosingCare_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_ClosingCare_Visit__c</fullName>
    <label>Last ClosingCare Visit</label>
    <type>Date</type>
</CustomField>