force-app/main/default/objects/WorkOrder/fields/Last_GPS_Lat__c.field-meta.xml
<CustomField>
    <fullName>Last_GPS_Lat__c</fullName>
    <label>Last GPS Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>