force-app/main/default/objects/WorkOrder/fields/Last_GPS_Lng__c.field-meta.xml
<CustomField>
    <fullName>Last_GPS_Lng__c</fullName>
    <label>Last GPS Longitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>