force-app/main/default/objects/WorkOrder/fields/Last_GPS_Ping_At__c.field-meta.xml
<CustomField>
    <fullName>Last_GPS_Ping_At__c</fullName>
    <label>Last GPS Ping At</label>
    <type>DateTime</type>
</CustomField>