force-app/main/default/objects/WorkOrder/fields/Legacy_Work_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Work_Order_Id__c</fullName>
    <description>Stores the old custom Work_Order__c Id after migration to standard Field Service WorkOrder. Text only so the custom object can be deleted after migration.</description>
    <externalId>true</externalId>
    <label>Legacy Work Order Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>