force-app/main/default/objects/WorkOrder/fields/Loading_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Loading_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Outdoor Living field execution gate: materials loaded/staged check completed.</description>
    <label>Loading Check Completed</label>
    <type>Checkbox</type>
</CustomField>