force-app/main/default/objects/WorkOrder/fields/Lot_Address__c.field-meta.xml
<CustomField>
    <fullName>Lot_Address__c</fullName>
    <label>Lot Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>