force-app/main/default/objects/WorkOrder/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName><label>Lot Number</label>
    <length>50</length><required>false</required>
    <type>Text</type><unique>false</unique>
</CustomField>