force-app/main/default/objects/WorkOrder/fields/LOVING_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>LOVING_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links standard FSL Work Orders back to the custom LOVING parent Work_Order__c orchestration record for Home Builder execution grouping.</description>
    <label>LOVING Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Standard Work Orders</relationshipLabel>
    <relationshipName>Standard_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>