force-app/main/default/objects/WorkOrder/fields/Lunch_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Minutes__c</fullName>
    <label>Lunch Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>