force-app/main/default/objects/WorkOrder/fields/Morning_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Morning_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Morning Check Complete</label>
    <type>Checkbox</type>
</CustomField>