force-app/main/default/objects/WorkOrder/fields/MPO_Lot__c.field-meta.xml
<CustomField>
    <fullName>MPO_Lot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPO Lot</label>
    <type>Checkbox</type>
</CustomField>