force-app/main/default/objects/WorkOrder/fields/Mulch_CY__c.field-meta.xml
<CustomField>
    <fullName>Mulch_CY__c</fullName>
    <description>Cubic yards of mulch in scope for this work order. Used as the trigger condition for Scene 6B (Delivery Quality Check) in FSL Mobile — the delivery inspection fires when this field is greater than zero or Sod_Square_Footage__c is greater than zero. Also used to calculate expected mulch delivery count vs actual for the Delivery_Quality_Check__c reconciliation. Source: entered during takeoff or pulled from BMG package scope.</description>
    <label>Mulch (Cubic Yards)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>