force-app/main/default/objects/WorkOrder/fields/Need_Further_Info_Notes__c.field-meta.xml
<CustomField>
    <fullName>Need_Further_Info_Notes__c</fullName>
    <label>Need Further Info Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>