force-app/main/default/objects/WorkOrder/fields/NFI_Count__c.field-meta.xml
<CustomField>
    <fullName>NFI_Count__c</fullName>
    <label>Need Further Info Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>