force-app/main/default/objects/WorkOrder/fields/NFI_Resolution__c.field-meta.xml
<CustomField>
    <fullName>NFI_Resolution__c</fullName>
    <label>NFI Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>