force-app/main/default/objects/WorkOrder/fields/NFI_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>NFI_Resolved_Date__c</fullName>
    <label>NFI Resolved Date</label>
    <type>Date</type>
</CustomField>