force-app/main/default/objects/WorkOrder/fields/NFI_Type__c.field-meta.xml
<CustomField>
    <fullName>NFI_Type__c</fullName>
    <label>NFI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Photos</fullName>
            </value>
            <value>
                <fullName>Quantity Variance</fullName>
            </value>
            <value>
                <fullName>Missing Scope</fullName>
            </value>
            <value>
                <fullName>Incomplete Aqua Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>