force-app/main/default/objects/WorkOrder/fields/ODL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ODL_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>ODL_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>