force-app/main/default/objects/WorkOrder/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>