force-app/main/default/objects/WorkOrder/fields/Outside_PO_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outside_PO_Notes__c</fullName>
    <label>Outside PO Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>