force-app/main/default/objects/WorkOrder/fields/Package_Variance__c.field-meta.xml
<CustomField>
    <fullName>Package_Variance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Variance</label>
    <type>Checkbox</type>
</CustomField>