force-app/main/default/objects/WorkOrder/fields/Parent_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Child Work Orders</relationshipLabel>
    <relationshipName>Child_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>