force-app/main/default/objects/WorkOrder/fields/Plant_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Plant_Quantity__c</fullName>
    <label>Plant Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>