force-app/main/default/objects/WorkOrder/fields/Plants_by_Species__c.field-meta.xml
<CustomField>
    <fullName>Plants_by_Species__c</fullName>
    <label>Plants by Species</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>