force-app/main/default/objects/WorkOrder/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName><label>PO Number</label>
    <length>100</length><required>false</required>
    <type>Text</type><unique>false</unique>
</CustomField>