force-app/main/default/objects/WorkOrder/fields/Proposed_Crew__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipName>Proposed_Crew_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>