force-app/main/default/objects/WorkOrder/fields/Proposed_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Schedule_Date__c</fullName>
    <label>Proposed Schedule Date</label>
    <type>Date</type>
</CustomField>