force-app/main/default/objects/WorkOrder/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Builder Purchase Order that triggered creation of this Work Order. Set by PO_to_Work_Order_Automation_Prod at WO creation. Used by LovingTakeoffGateController to advance WO status when Takeoff is approved.</description>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>