force-app/main/default/objects/WorkOrder/fields/QI_Complete__c.field-meta.xml
<CustomField>
    <fullName>QI_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Outdoor Living field execution gate: quality inspection completed for this work order.</description>
    <label>QI Complete</label>
    <type>Checkbox</type>
</CustomField>