force-app/main/default/objects/WorkOrder/fields/QI_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>QI_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FM or inspector who submitted the QI Inspection. Populated by QIService when QI_Inspection__c is submitted.</description>
    <label>QI Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders (QI Completed By)</relationshipLabel>
    <relationshipName>QICompletedBy_WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>