force-app/main/default/objects/WorkOrder/fields/QI_Date__c.field-meta.xml
<CustomField>
    <fullName>QI_Date__c</fullName>
    <label>QI Date</label>
    <type>Date</type>
</CustomField>