force-app/main/default/objects/WorkOrder/fields/QI_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>QI_Due_Date__c</fullName>
    <description>5-business-day deadline for QI completion after closeout approval. Set by CloseoutService.onApproved(). Used by QIService.checkQISLA() for escalation.</description>
    <label>QI Due Date</label>
    <type>Date</type>
</CustomField>