force-app/main/default/objects/WorkOrder/fields/QI_Escalated__c.field-meta.xml
<CustomField>
    <fullName>QI_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when QI SLA breach has been escalated to COO. Prevents duplicate escalation notifications. Set by EscalationService.escalateQISLABreach().</description>
    <label>QI Escalated</label>
    <type>Checkbox</type>
</CustomField>