force-app/main/default/objects/WorkOrder/fields/QI_Escalation_Fired__c.field-meta.xml
<CustomField>
    <fullName>QI_Escalation_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Escalation Fired</label>
    <type>Checkbox</type>
</CustomField>