force-app/main/default/objects/WorkOrder/fields/QI_FM__c.field-meta.xml
<CustomField>
    <fullName>QI_FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QI Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>QI Field Manager</relationshipLabel>
    <relationshipName>WO_QI_FM</relationshipName>
    <type>Lookup</type>
</CustomField>