force-app/main/default/objects/WorkOrder/fields/QI_Held__c.field-meta.xml
<CustomField>
    <fullName>QI_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Outdoor Living field execution gate: quality inspection is on hold (blocks completion).</description>
    <label>QI Held</label>
    <type>Checkbox</type>
</CustomField>