force-app/main/default/objects/WorkOrder/fields/QI_Overdue__c.field-meta.xml
<CustomField>
    <fullName>QI_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by QIService.checkQISLA() when QI_Due_Date__c has passed and QI_Status__c is still Pending Quality Inspection or Scheduled. Triggers escalation.</description>
    <label>QI Overdue</label>
    <type>Checkbox</type>
</CustomField>