force-app/main/default/objects/WorkOrder/fields/QI_Required__c.field-meta.xml
<CustomField>
    <fullName>QI_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether a QI Inspection is required for this Work Order. Defaults to true for Production Install type. Set false for internal or warranty WOs that skip QI.</description>
    <label>QI Required</label>
    <type>Checkbox</type>
</CustomField>