force-app/main/default/objects/WorkOrder/fields/QI_Result__c.field-meta.xml
<CustomField>
    <fullName>QI_Result__c</fullName>
    <description>Outcome of the submitted QI Inspection. Set by QIService based on Overall_Score__c thresholds (Excellent ≥ 8, Acceptable ≥ 5, Red &lt; 5).</description>
    <label>QI Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Red — Rework Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>