force-app/main/default/objects/WorkOrder/fields/QI_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>QI_Scheduled_Date__c</fullName>
    <description>Date the FM has scheduled the QI Inspection. Set when FM confirms the QI appointment. Enables Scheduled status in QI_Status__c.</description>
    <label>QI Scheduled Date</label>
    <type>Date</type>
</CustomField>