force-app/main/default/objects/WorkOrder/fields/QI_Score__c.field-meta.xml
<CustomField>
    <fullName>QI_Score__c</fullName>
    <label>QI Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>